# storyteller

./: .dockerignore  .gitignore  Dockerfile  README.md  cli.py  pyproject.toml
config/: feature_flags.json
src/: api.py  core.py  feature_flags.py  image_creator.py  image_factory.py  photographer.py  publisher.py  screenplay_writer.py  story.py  story_creator.py  story_developer.py  story_writer.py  utils.py
static/: index.html  main.js  main.ts
tests/: __init__.py  test_api.py  test_utils.py
