[project]
name = "storyteller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "openai>=1.82.1",
    "openai-agents>=0.0.16",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "tenacity>=9.1.2",
    "typer>=0.16.0",
    "uuid>=1.30",
]

[dependency-groups]
dev = [
    "pip>=25.1.1",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
